--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "production": {
     "use_env_variable": "DATABASE_URL"
   },
+  "repository": {
+  "type": "git",
+  "url": "git://github.com/ketikat/iloveplant"
+},
   "scripts": {
     "build-client": "webpack",
     "build-client-watch": "webpack -w",
     "deploy": "git checkout -b deploy && webpack -p && git add -f public/bundle.js public/bundle.js.map && git commit --allow-empty -m 'Deploying' && git push --force heroku deploy:master && git checkout master && git branch -D deploy",
     "lint": "eslint ./ --ignore-path .gitignore",
-    "postinstall": "touch secrets.js",
     "seed": "node script/seed2.js",
     "start": "node server",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & npm run start-server",
@@ -24,56 +27,56 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.15.3",
-    "body-parser": "^1.16.1",
-    "compression": "^1.7.1",
-    "connect-session-sequelize": "^4.1.0",
-    "cool-ascii-faces": "1.3.4",
-    "express": "^4.14.1",
-    "express-session": "^1.15.1",
-    "history": "^4.6.3",
-    "morgan": "^1.8.1",
-    "nodemailer": "^4.4.1",
-    "passport": "^0.3.2",
-    "passport-google-oauth": "^1.0.0",
-    "pg": "^6.1.2",
-    "pg-hstore": "^2.3.2",
-    "prop-types": "^15.5.8",
-    "react": "^16.0.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.2",
-    "react-router-dom": "^4.1.1",
-    "react-stripe-checkout": "^2.6.3",
-    "react-table": "^6.7.6",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.8.1",
-    "redux-thunk": "^2.2.0",
-    "sequelize": "^4.3.1",
-    "stripe": "^5.4.0",
-    "superagent": "^3.8.2",
-    "victory": "^0.24.5",
-    "axios-mock-adapter": "^1.9.0",
+    "axios": "0.15.3",
+    "axios-mock-adapter": "1.14.1",
     "babel-core": "^6.22.1",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^6.2.10",
+    "babel-eslint": "8.2.2",
+    "babel-loader": "6.4.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
+    "body-parser": "^1.16.1",
     "chai": "^3.5.0",
+    "compression": "1.7.2",
+    "connect-session-sequelize": "^4.1.0",
+    "cool-ascii-faces": "1.3.4",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
-    "eslint": "^4.10.0",
+    "eslint": "4.18.2",
     "eslint-config-fullstack": "^3.0.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "7.7.0",
+    "express": "4.16.3",
+    "express-session": "^1.15.1",
+    "history": "^4.6.3",
     "mocha": "^3.3.0",
-    "nodemon": "^1.12.1",
-    "react-autosuggest": "^9.3.2",
+    "morgan": "^1.8.1",
+    "nodemailer": "4.6.3",
+    "nodemon": "1.17.2",
+    "passport": "0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "pg": "6.4.2",
+    "pg-hstore": "^2.3.2",
+    "prop-types": "15.6.1",
+    "react": "^16.0.0",
+    "react-autosuggest": "9.3.4",
+    "react-dom": "^16.2.0",
+    "react-redux": "5.0.7",
+    "react-router-dom": "^4.1.1",
+    "react-stripe-checkout": "^2.6.3",
+    "react-table": "6.8.0",
     "react-test-renderer": "^16.0.0",
+    "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-mock-store": "^1.2.3",
+    "redux-logger": "2.10.2",
+    "redux-mock-store": "1.5.1",
+    "redux-thunk": "^2.2.0",
+    "sequelize": "4.37.0",
+    "stripe": "5.5.0",
+    "superagent": "^3.8.2",
     "supertest": "^3.0.0",
-    "webpack": "^2.2.1",
-    "webpack-livereload-plugin": "^1.0.0"
+    "victory": "0.24.5",
+    "webpack": "2.7.0",
+    "webpack-livereload-plugin": "1.0.0"
   }
 }
